--- a/GroceryOTG/res/layout/grocery_list_row.xml
+++ b/GroceryOTG/res/layout/grocery_list_row.xml
@@ -82,7 +82,7 @@
 				</TextView>
 	
 		        <TextView
-		            android:id="@+id/grocery_row_store"
+		            android:id="@+id/grocery_row_distance"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:paddingBottom="4dp"
@@ -136,6 +136,13 @@
 		<!-- Hold meta for flyer url -->
 		<TextView
 			android:id="@+id/grocery_row_flyer_url"
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:visibility="gone"
+			android:text="" />
+		<!-- Hold meta for store parent name -->
+		<TextView
+			android:id="@+id/grocery_row_store_parent_name"
 			android:layout_width="0dp"
 			android:layout_height="0dp"
 			android:visibility="gone"
