--- a/GroceryOTG/res/layout/shopcart_add_activity.xml
+++ b/GroceryOTG/res/layout/shopcart_add_activity.xml
@@ -5,6 +5,12 @@
 	android:id="@+id/navigation_drawer_layout"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent" >
+	
+	<LinearLayout
+		android:id="@+id/content"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent" >
+	</LinearLayout>
 
 	<ListView
 		android:id="@+id/navigation_drawer_view"
