--- a/GroceryOTG/res/layout/grocery_list_row.xml
+++ b/GroceryOTG/res/layout/grocery_list_row.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/grocery_list_row_layout"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="horizontal" >
 	
 	<LinearLayout
-	    android:id="@+id/grocery_list_row_layout"
-	    android:layout_width="match_parent"
+	    android:layout_width="0dp"
 	    android:layout_height="match_parent"
 	    android:layout_weight="1.0"
 		android:orientation="vertical" >
@@ -161,7 +161,6 @@
 		android:layout_width="wrap_content"
 		android:layout_height="match_parent"
 		android:layout_gravity="center_vertical"
-		
 		android:gravity="center_vertical" >
 		
 		<CheckBox
