--- a/GroceryOTG/res/layout/shopcart_add_tab_voice.xml
+++ b/GroceryOTG/res/layout/shopcart_add_tab_voice.xml
@@ -10,19 +10,23 @@
 		android:layout_width="match_parent"
 		android:layout_height="0dp"
 		android:layout_weight="1.0"
-		android:src="@drawable/icon_bread" >
+		android:background="?android:attr/selectableItemBackground"
+		android:src="@drawable/ic_cart_add_mic_button" >
 	</ImageButton>
 	
 	<TextView
 		android:id="@+id/voice_text"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content" >
+		android:layout_height="wrap_content"
+		android:paddingTop="10dp"
+		android:paddingBottom="10dp" >
 	</TextView>
 	
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:orientation="horizontal" >
+		android:orientation="horizontal"
+		android:paddingBottom="20dp" >
 		
 		<Button
 			android:id="@+id/negative_button"
