Adding voice recognition functionality.

--- a/GroceryOTG/res/layout/shopcart_add_tab_voice.xml
+++ b/GroceryOTG/res/layout/shopcart_add_tab_voice.xml
@@ -19,7 +19,9 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:paddingTop="10dp"
-		android:paddingBottom="10dp" >
+		android:paddingBottom="10dp"
+		android:hint="@string/search_voice_hint"
+		android:gravity="center_horizontal" >
 	</TextView>
 	
 	<LinearLayout
