--- a/GroceryOTG/res/layout/shopcart_add_tab_code.xml
+++ b/GroceryOTG/res/layout/shopcart_add_tab_code.xml
@@ -6,21 +6,46 @@
 	android:layout_height="match_parent"
 	android:padding="20dp">
 
-	<EditText
-		android:id="@+id/cart_grocery_edit_name"
-		android:layout_width="fill_parent"
-		android:layout_height="0dip"
-		android:layout_weight="1"
-		android:inputType="textAutoCorrect"
-		android:hint="@string/cart_grocery_edit_name"
-		>
-	</EditText>
-
-	<Button
-		android:id="@+id/cart_confirm_button"
-		android:layout_width="wrap_content"
+	<ImageButton
+		android:id="@+id/barcode_button"
+		android:layout_width="match_parent"
+		android:layout_height="0dp"
+		android:layout_weight="1.0"
+		android:background="?android:attr/selectableItemBackground"
+		android:src="@drawable/ic_cart_add_mic_button" >
+	</ImageButton>
+	
+	<TextView
+		android:id="@+id/code_text"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:text="@string/cart_add_positive_button">
-	</Button>
+		android:paddingTop="10dp"
+		android:paddingBottom="10dp"
+		android:hint="@string/search_voice_hint"
+		android:gravity="center_horizontal" >
+	</TextView>
+	
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal"
+		android:paddingBottom="20dp" >
+		
+		<Button
+			android:id="@+id/negative_button"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:layout_weight="1"
+			android:text="@string/cart_add_negative_button" >
+		</Button>
+		
+		<Button
+			android:id="@+id/positive_button"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:layout_weight="1"
+			android:text="@string/cart_add_positive_button" >
+		</Button>
+	</LinearLayout>
 
 </LinearLayout>
