--- a/GroceryOTG/res/values/notification.xml
+++ b/GroceryOTG/res/values/notification.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string-array name="freq_value">
+	<integer-array name="freq_value">
 		<item>1</item>
 		<item>2</item>
 		<item>3</item>
-	</string-array>
+	</integer-array>
 
 	<string-array name="freq_entry">
-		<item>Never</item>
+		<item>Often</item>
 		<item>Sometimes</item>
-		<item>Always</item>
+		<item>Rarely</item>
 	</string-array>
 </resources>
