--- a/GroceryOTG/res/values/arrays.xml
+++ b/GroceryOTG/res/values/arrays.xml
@@ -9,4 +9,15 @@
 		<item>#e46414</item>
 		<item>#ef0588</item>
 	</string-array>
+	
+	<string-array name="notification_freq_value">
+		<item>1</item>
+		<item>2</item>
+		<item>3</item>
+	</string-array>
+	<string-array name="notification_freq_entry">
+		<item>Often</item>
+		<item>Sometimes</item>
+		<item>Rarely</item>
+	</string-array>
 </resources>
