--- a/GroceryOTG/res/xml/preferences.xml
+++ b/GroceryOTG/res/xml/preferences.xml
@@ -16,8 +16,9 @@
 			android:key="notification_freq"
 			android:title="@string/setting_notification_freq_title"
 			android:summary="@string/setting_notification_freq_summary"
-			android:entries="@array/freq_entry"
-			android:entryValues="@array/freq_value"
+			android:dependency="notification_enabled"
+			android:entries="@array/notification_freq_value"
+			android:entryValues="@array/notification_freq_entry"
 			android:defaultValue="1" />
 	</PreferenceCategory>
 
