Fixing some linter warnings.

--- a/GroceryOTG/res/layout/shopcart_add_activity.xml
+++ b/GroceryOTG/res/layout/shopcart_add_activity.xml
@@ -6,11 +6,11 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent" >
 	
-	<LinearLayout
+	<RelativeLayout
 		android:id="@+id/content"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent" >
-	</LinearLayout>
+	</RelativeLayout>
 
 	<ListView
 		android:id="@+id/navigation_drawer_view"
