--- a/GroceryOTG/res/layout/grocery_list_row.xml
+++ b/GroceryOTG/res/layout/grocery_list_row.xml
@@ -83,7 +83,8 @@
 				android:id="@+id/grocery_list_row2"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:orientation="horizontal" >
+				android:orientation="horizontal"
+				android:baselineAligned="false" >
 				
 				<LinearLayout
 					android:layout_width="0dp"
