--- a/GroceryOTG/res/xml/changelog.xml
+++ b/GroceryOTG/res/xml/changelog.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <changelog>
+	<release version="nightly-20130621" versioncode="7">
+		<change>Feature: Offloaded static calculations to the splash screen. This seems to dramatically improve the responsiveness of the app once it is loaded.</change>
+		<change>Bugfix: Fixing grocery list updating sync.</change>
+		<change>Bugfix: Fixing notification behaviour (again).</change>
+		<change>Bugfix: Fixing Gingerbread support.</change>
+		<change>Tweak: Various code improvements.</change>
+	</release>
 	<release version="nightly-20130620" versioncode="6">
 		<change>Feature: Items can now be added to the cart manually by voice.</change>
 		<change>Feature: Items can now be added to the cart manually by barcode.</change>
