--- a/GroceryOTG/res/layout/shopcart_add_fragment.xml
+++ b/GroceryOTG/res/layout/shopcart_add_fragment.xml
@@ -5,20 +5,27 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent" >
 
-	 <EditText
-		android:id="@+id/cart_grocery_edit_name"
+	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
+		android:layout_height="0dp"
+		android:layout_weight="1.0"
 		android:paddingTop="30dp"
-		android:paddingBottom="30dp"
-		android:inputType="textAutoCorrect"
-		android:hint="@string/cart_grocery_edit_name"
-		android:imeOptions="actionGo" >
-	</EditText>
+		android:orientation="vertical" >
+		
+		<EditText
+			android:id="@+id/cart_grocery_edit_name"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:inputType="textAutoCorrect"
+			android:hint="@string/cart_grocery_edit_name"
+			android:imeOptions="actionGo" >
+		</EditText>
+	</LinearLayout>
 	
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:paddingBottom="20dp"
 		android:orientation="horizontal" >
 		
 		<Button
