Adding visual feedback when clicking on a category, playing around with colours a bit.

--- a/GroceryOTG/res/layout/category_fragment_list.xml
+++ b/GroceryOTG/res/layout/category_fragment_list.xml
@@ -16,7 +16,9 @@
 		android:gravity="center"
 		android:padding="5dp"
 		android:paddingTop="10dp"
-		android:stretchMode="spacingWidthUniform" />
+		android:stretchMode="spacingWidthUniform"
+		android:listSelector="@drawable/non_empty_background_selectable"
+		android:drawSelectorOnTop="true" />
 
 	<TextView
 		android:id="@+id/empty_category_list"
