--- a/GroceryOTG/res/drawable/non_empty_background_selectable.xml
+++ b/GroceryOTG/res/drawable/non_empty_background_selectable.xml
@@ -4,7 +4,7 @@
     <item
         android:state_pressed="true"
         android:state_focused="true"
-        android:drawable="@color/holo_blue_light" />
+        android:drawable="@color/t_holo_blue_light" />
     <item
         android:state_pressed="false"
         android:state_focused="true"
@@ -14,5 +14,5 @@
         android:drawable="@color/transparent" />
     <item
         android:state_pressed="true"
-        android:drawable="@color/holo_blue_light" />
+        android:drawable="@color/t_holo_blue_light" />
 </selector>
