Fixed default value of grocery expiry date to be blank

--- a/GroceryOTG/res/layout/grocery_list_row.xml
+++ b/GroceryOTG/res/layout/grocery_list_row.xml
@@ -139,7 +139,7 @@
 				    android:singleLine="true"
 				    android:textColor="#999999"
 				    android:gravity="right"
-				    android:text="asdf"
+				    android:text=""
 				    />
 					
 			</LinearLayout> <!-- end of row 3 -->
