--- a/GroceryGo-Android/res/values/colours.xml
+++ b/GroceryGo-Android/res/values/colours.xml
@@ -20,6 +20,8 @@
 	<color name="holo_orange_dark">#ffff8800</color>
 	<!-- A really bright Holo shade of blue -->
 	<color name="holo_blue_bright">#ff00ddff</color>
+	<!-- A light shade of gray -->
+	<color name="holo_gray_light">#ff999999</color>
 	
 	<color name="white">#ffffffff</color>
 	<color name="black">#ff000000</color>
