--- a/GroceryGo-Android/res/layout/shopcart_summary_list_row.xml
+++ b/GroceryGo-Android/res/layout/shopcart_summary_list_row.xml
@@ -7,7 +7,7 @@
 	android:orientation="horizontal" >
 
 	<TextView
-		android:id="@+id/grocery_row_label"
+		android:id="@+id/shopcart_summary_storeparent"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_weight="0.6"
@@ -22,13 +22,13 @@
 	</TextView>
 	
 	<TextView
-		android:id="@+id/grocery_row_price"
+		android:id="@+id/shopcart_summary_total"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_gravity="right"
 		android:layout_weight="0.4"
 		android:text="@+id/shopcart_summary_total"
-		android:textColor="#ffcc0000"
+		android:textColor="@color/holo_red_dark"
 		android:textSize="18sp"
 		android:fontFamily="sans-serif"
 		android:singleLine="true"
