--- a/GroceryGo-Android/res/layout/shopcart_summary_list_header.xml
+++ b/GroceryGo-Android/res/layout/shopcart_summary_list_header.xml
@@ -1,43 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/shopcart_summary_list_row_layout"
+	android:id="@+id/shopcart_summary_list_header_layout"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="horizontal" >
 
 	<TextView
-		android:id="@+id/shopcart_summary_storeparent"
+		android:id="@+id/shopcart_summary_title_storeparent"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_weight="0.6"
-		android:text="@+id/shopcart_summary_storeparent"
-		android:textSize="16sp"
+		android:text="@string/shopcart_summary_title_storeparent"
+		android:textSize="18sp"
 		android:fontFamily="sans-serif"
-		android:textStyle="normal"
+		android:textStyle="bold"
 		android:singleLine="false"
 		android:gravity="left"
 		android:padding="4dp" >
 	</TextView>
 	
 	<TextView
-		android:id="@+id/shopcart_summary_total"
+		android:id="@+id/shopcart_summary_title_total"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_weight="0.4"
-		android:text="@+id/shopcart_summary_total"
-		android:textSize="16sp"
+		android:text="@string/shopcart_summary_title_total"
+		android:textSize="18sp"
 		android:fontFamily="sans-serif"
+		android:textStyle="bold"
 		android:singleLine="true"
 		android:gravity="left"
 		android:padding="4dp" >
 	</TextView>
 	
-	<!-- Hold meta for store parent id -->
-	<TextView
-		android:id="@+id/shopcart_summary_storeparent_id"
-		android:layout_width="0dp"
-		android:layout_height="0dp"
-		android:visibility="gone"
-		android:text="" />
 </LinearLayout>
