-added terms & privacy link to about dialog -new release key

--- a/GroceryGo-Android/res/layout/about_dialog.xml
+++ b/GroceryGo-Android/res/layout/about_dialog.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<WebView xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/about_dialog_textbox"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:layout_gravity="center"
-	android:autoLink="email"
+	android:autoLink="web"
 	android:drawableStart="@drawable/ic_launcher"
 	android:drawablePadding="10dp"
 	android:fontFamily="sans-serif-light"
 	android:gravity="left"
-	android:text="@string/about_text"
-	android:textIsSelectable="false"
 	android:textSize="18sp"
 	android:textStyle="normal"
 	android:padding="10dp"
 	android:contentDescription="@string/app_name" >
-</TextView>
+</WebView>
