Updated version number and changelog, ready for release

--- a/GroceryGo-Android/res/xml/changelog.xml
+++ b/GroceryGo-Android/res/xml/changelog.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <changelog>
-	<release version="GroceryGo v1.1" versioncode="1">
+	<release version="GroceryGo v1.2" versioncode="1">
 		<change>Welcome to GroceryGo</change>
+		<change>Fixed minor issues</change>
 		<change>Please help us by sending your feedback from the About page</change>
 	</release>
 </changelog>
