Added FreshCo to client side

--- a/GroceryGo-Android/res/values/stores.xml
+++ b/GroceryGo-Android/res/values/stores.xml
@@ -6,6 +6,7 @@
 		<item>Food Basics</item>
 		<item>No Frills</item>
 		<item>Sobeys</item>
+		<item>FreshCo</item>
 	</string-array>
 	<string-array name="store_ids">
 		<item>1</item>
@@ -13,5 +14,6 @@
 		<item>3</item>
 		<item>4</item>
 		<item>5</item>
+		<item>6</item>
 	</string-array>
 </resources>
